--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,23 @@ text {
   fill: #333;
 }
 
+
+/* binary tree */
+
+body {
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  width: 840px;
+  margin: 0 auto 50px auto;
+  font-size: 14px;
+}
+
+svg {
+  width: 840px;
+  height: 600px;
+  font-family: helvetica, sans-serif;
+}
+
+path, line {
+  stroke: #777;
+}
+
